--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -71,6 +71,13 @@ body {
 
 
 
+.profile-about-text {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  color: #2c3e50;
+}
+
 .btn {
   display: inline-block;
   background-color: $text-active-color;
