--- a/layouts/partials/widget_page.html
+++ b/layouts/partials/widget_page.html
@@ -23,7 +23,7 @@
 
 
 
-          <img src="{{ "images/avatar.jpg" | relURL }}" class=" avatar avatar-square " />
+          <img src="{{ "images/avatar.png" | relURL }}" class=" avatar avatar-circle " />
 
 
           <div class="portrait-title">
