--- a/layouts/section/props.html
+++ b/layouts/section/props.html
@@ -51,8 +51,15 @@
         {{ end }}
 
 
-      <div>{{.Content}}</div>
 
+      <div class="props-making-text">
+        <div class="text-head1">
+          <p>Props Making</p>
+          <hr/>
+          <p>Making of Human-Sized Snap Flower Prop and Wooden Back Wall</p>
+        </div>
+        <div  class="text-body1">{{.Content}}</div>
+      </div>
 
     </div>
   </section>
