--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -312,6 +312,22 @@ body {
 
 }
 
+
+.props-making-text {
+  .text-head1  {
+    margin: 2rem 0 3rem 0;
+  }
+  .text-head1, .props-red-text {
+    color: #C00000;
+    font-weight: bold;
+  }
+  strong {
+    color: #002060;
+    font-weight: bold;
+  }
+}
+
+
 .page-scripts {
   .files-list-wrap {
     margin: 5rem 0 1rem 1rem;
